Notify families when upcoming events are canceled
